2005-07-11  Vivek Jain  <jvivek@novell.com>
	
	* new-mail-notify.c :(send_dbus_message)
	check whether memory could be allocated. Return if the 
	message is NULL so that we don't unref it again, will save crash.
	**Fixes #274329 sort of bugs, in case reported even after 
	david's fix.

2005-05-11  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: added built_sources/cleanfiles

2005-05-06  Not Zed  <NotZed@Ximian.com>

	* new-mail-notify.c: make the bus connection global and keep track
	of the gconf state directly too.
	(org_gnome_new_mail_config): removed configuration section,
	implicitly enabled by enabling the plugin now.

2005-04-06  Timo Hoenig  <thoenig@novell.com>

	* new-mail-notify.c (send_dbus_message): added two checks to prevent
	Evolution to crash if the D-BUS session bus is not running or if
	D-BUS is not able to allocate memory for the message
	* new-mail-notify.c (e_plugin_lib_enable): refuse to load the plugin
	if the address of the D-BUS session bus can not be determined
	* new-mail-notify.c (e_plugin_lib_enable): new function

2005-05-06  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: 
	* org-gnome-new-mail-notify.eplug.xml: s/.in/.xml/ & i18n.

2005-03-11  David Malcolm  <dmalcolm@redhat.com>

	* new-mail-notify.c: preprocessor hackery using the value of
	DBUS_VERSION to cope with changes to the semantics of
	dbus_message_append_args
	
	* Makefile.am: define the DBUS_VERSION in the preprocessor

2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-new-mail-notify.eplug.in: Added id for mail preferences.

2005-01-13  Not Zed  <NotZed@Ximian.com>

	* new-mail-notify.c: added prototypes for exported functions,
	re-arranged slightly to staticise internal functions.

	* new-mail-notify.h: removed.

2005-01-12  Miguel Angel Lopez Hernandez  <miguel@gulev.org.mx>

	* new-mail-notify.[ch]: Fix author's name, changes in code
	to maintain coding style
	(org_gnome_new_mail_notify): Now sends the dbus message using
	the send_dbus_message function